distro: Add support for python 3.8
Add support in distro layer to support 3 different versions of
python3: 3.9 (default), 3.8 or 3.6

A0349 - GRR -- Create a Python 3.8 Recipe

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -286,9 +286,9 @@ NOTE: No preferred version should be set for linux-local provider.
 
     DISTRO_FEATURES_append = " gcc9"
     
-2.3.10. Select the version of python3 to use: 3.9 (default) or 3.6.
+2.3.10. Select the version of python3 to use: 3.9 (default), 3.8 or 3.6.
 
-    PYTHON_VERSION = "3.6"
+    PYTHON_VERSION = "3.8"
     
 2.3.11. Depending on your host processor, set these two options that
       control how much parallelism BitBake should use (optional):
