--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -177,6 +177,9 @@ below shoud be replaced with the actual value you provided prior).
      - for INTEL Axxia x86_64 Gen4 systems (Grand Ridge CPU)
      MACHINE = "intel-axxia-grr"
 
+     - for INTEL QSP System used in simulation
+     MACHINE = "genericx86-64"
+
 2.3.4. Select the main kernel to use (virtual/kernel provider).
      You can build the kernel from 3 sources:
 
@@ -199,8 +202,11 @@ b. Yocto Git (git.yoctoproject.org)
    5.10: git://git.yoctoproject.org/linux-yocto.git
          v5.10/standard/base or v5.10/standard/preempt-rt/base
          
-   Other versions for the Intel kernel are: linux-yocto-rt,
+   Other versions for the Yocto kernel are: linux-yocto-rt,
    linux-yocto-debug, linux-yocto-rt-debug.
+
+   NOTE: For INTEL QSP System used in simulation, linux-yocto is
+   the only compatible kernel with genericx86-64 machine.
 
 c. Local Kernel repositories (for Linux development)
 
@@ -341,6 +347,9 @@ Available root filesystem types:
 
    * axxia-image-dev
      A more complete image. Contains the SDK and LTP.
+
+   * axxia-image-qsp (for genericx86-64 machine)
+     A small image used for the QSP System used in simulation.
 
 Once complete the images for the target machine will be available in 
 the output directory 'tmp/deploy/images/$MACHINE'.
