meta-intel-distro: Remove obsoleted bbclasses
Starting with commit e897e02d21 and ce73f4f9d3 from poky,
image-mklibs and image-prelink classes were removed as obsoleted.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -319,7 +319,7 @@ DISTRO = "intel-axxia"
 DISTRO_FEATURES:append = " simics"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
-USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats"
 PATCHRESOLVE = "noop"
 BB_DISKMON_DIRS = "\
     STOPTASKS,${TMPDIR},1G,100K \
