--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -181,7 +181,7 @@ below shoud be replaced with the actual value you provided prior).
      MACHINE = "genericx86-64"
 
 2.3.4. Select the main kernel to use (virtual/kernel provider).
-     You can build the kernel from 3 sources:
+     You can build the kernel from 2 sources:
 
 a. Public Intel Github (github.com/intel)
 
@@ -194,21 +194,7 @@ a. Public Intel Github (github.com/intel)
    Other versions for the Intel kernel are: linux-intel-rt,
    linux-intel-debug, linux-intel-rt-debug.
    
-b. Yocto Git (git.yoctoproject.org)
-
-   PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
-   
-   will build kernel from Intel Github public repos:
-   5.10: git://git.yoctoproject.org/linux-yocto.git
-         v5.10/standard/base or v5.10/standard/preempt-rt/base
-         
-   Other versions for the Yocto kernel are: linux-yocto-rt,
-   linux-yocto-debug, linux-yocto-rt-debug.
-
-   NOTE: For INTEL QSP System used in simulation, linux-yocto is
-   the only compatible kernel with genericx86-64 machine.
-
-c. Local Kernel repositories (for Linux development)
+b. Local Kernel repositories (for Linux development)
 
    If you want to base a Yocto build on a local Linux kernel, do the
    following. First, make the following changes to local.conf.
@@ -241,9 +227,6 @@ NOTE: No preferred version should be set for linux-local provider.
    - for any linux-intel* kernel provider, bitbake will build linux-intel,
      linux-intel-rt, linux-intel-debug and linux-intel-rt-debug kernels
    
-   - for any linux-yocto* kernel provider, bitbake will build linux-yocto,
-     linux-yocto-rt, linux-yocto-debug and linux-yocto-rt-debug kernels
-  
    The kernel which is set as virtual/kernel provider will be installed
    as usual in the deploy directory of the build. Alternative kernels
    with their modules will be installed in deploy directory under 
