--- a/meta-intel-rdk/README
+++ b/meta-intel-rdk/README
@@ -156,7 +156,8 @@ in conf/local.conf:
 
      KERNEL_MODULE_AUTOLOAD:append = " hqm"
      KERNEL_MODULE_AUTOLOAD:append = " igb"
-     KERNEL_MODULE_AUTOLOAD:append = " qat_c4xxx"
+     KERNEL_MODULE_AUTOLOAD:append = " qat_c4xxx" # Specific to SnowRidge
+     KERNEL_MODULE_AUTOLOAD:append = " qat_300xx" # Specific to GrandRidge
      KERNEL_MODULE_AUTOLOAD:append = " intel_qat"
      KERNEL_MODULE_AUTOLOAD:append = " ice_sw"
 
