linux-local: Add lttng support for local kernel
Starting with commit 88c3abecd1 ("axxia-image-vcn: Set condition
for enabling lttng support") - A0248, lttng support was removed if
the preferred kernel is linux-local because lttng-modules version
fails sometimes with newer kernels.

Revert this and add lttng packages for linux-local too, but add
the possibility to disable lttng support if fails in order to build
at least the linux-local kernel (LTTNG_SUPPORT="" in local.conf).

B0269 - No LTTng  when using the Local Kernel Recipe

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -212,6 +212,9 @@ b. Local Kernel repositories (for Linux development)
    NOTE: All changes must be committed in the local kernel, as the
          build will clone it using git.
 
+   NOTE: If you want to skip lttng support for your local kernel:
+         LTTNG_SUPPORT = ""
+
 2.3.5. Select the version for the main kernel: 5.15 (default) or 5.10
 
    PREFERRED_VERSION_(preferred-provider)= "5.15%"
