intel-axxia: Add support for multiple GCC versions
Since the new GCC, version 13, supports 'grandridge' CPU as part of
the x86 family of computers [1], add support for 'grandridge' CPU_TYPE
for GRR machine/tuning.

[1] https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html

A0373 - GRR -- Add Support for GCC 13

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -265,13 +265,18 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-<simics-version>.tgz simics-<simics-version>
 
-2.3.10. Depending on your host processor, set these two options that
+2.3.10. Choose a different GCC version to use: 13.% (gcc13 feature).
+    Default version is 11.%.
+
+    DISTRO_FEATURES:append = " gcc13"
+
+2.3.11. Depending on your host processor, set these two options that
       control how much parallelism BitBake should use (optional):
 
     BB_NUMBER_THREADS = "12"
     PARALLEL_MAKE = "-j 12"
 
-2.3.11. Other optional settings for saving disk space and build time:
+2.3.12. Other optional settings for saving disk space and build time:
    
     DL_DIR = "/(some-shared-location)/downloads"
     SSTATE_DIR = "/(some-shared-location)/sstate-cache
