--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -137,10 +137,18 @@ COM-watchdog-iTCO_wdt-use-dev_-instead-of-pr_-for-loggin.patch
 COM-watchdog-iTCO_wdt-use-dev_err-instead-of-pr_err.patch
 COM-watchdog-iTCO_wdt-No-need-to-stop-the-timer-in-probe.patch
 
+
 Allow Displaying and Change Reboot Flags via SYSFS
 --------------------------------------------------
 
 COM-reboot-allow-to-specify-reboot-mode-via-sysfs.patch
+
+
+iommu: Add support to change default domain of an iommu group
+-------------------------------------------------------------
+
+COM-iommu-Add-support-to-change-default-domain-of-an-iom.patch
+
 
 MDEV Functions
 --------------
@@ -149,6 +157,7 @@ GRR only.  Back-ported from lkml.org to support building DLB with MDEV.
 
 GRR-vfio-mdev-Add-a-member-for-iommu-domain-in-mdev_devi.patch
 GRR-vfio-type1-Save-domain-when-attach-domain-to-mdev.patch
+
 
 Disable MEI Driver on Ignition FW
 ---------------------------------
