meta-intel-bsp: Linux Patch for IOMMU on GRR
Add the GRR device ID to the IOMMU driver.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -167,6 +167,11 @@ This avoids errors in the system logs.
 GRR-mei-kdoc-fix-partial-back-port.patch
 GRR-mei-me-disable-driver-on-the-ign-firmware.patch
 
+Add the GRR Device ID to the IOMMU Driver
+-----------------------------------------
+
+GRR-drivers-iommu-Add-GRR-device-ID.patch
+
 
 II. Building meta-intel-bsp
 ===========================
